--- a/Entregable_tp1/css/style.css
+++ b/Entregable_tp1/css/style.css
@@ -1,30 +1,40 @@
 body{
-    bottom: 0;
     font-family:'Raleway',sans-serif;
-    text-align: left;      
+    align-content: center;   
+    background-color:rgb(201, 225, 235);
 }
 h1{
     font-family: Helvetica, sans-serif;
+    text-transform: uppercase;
+    text-align: center;
 }
 ul{
     align-content: center;
 }
 .navigation li:hover {
     background-color: grey;
+
 }
+
 .navigation{
-    /*text-align:center;
-    background:rgb(173, 167, 144);*/
-    border-bottom:5px solid grey;
+    margin-bottom: 1%;
+    margin-left: 10%;
+    /*border-bottom:5px solid grey;*/
 }
-.item {
-    display: inline-block;
-    margin: 0px 20px;
-    color: white;
-    text-transform: uppercase;
+.button1{ 
+    height: 35px;
+    border-radius: 5px;
+    background-color: rgb(96, 148, 89);
+    color:rgb(255, 255, 255);
     font-family: Helvetica, sans-serif;
-    padding: 10px;
-  }
+}
+.button2{ 
+    height: 35px;
+    border-radius: 5px;
+    background-color: rgb(80, 180, 142);
+    color:rgb(255, 255, 255);
+    font-family: Helvetica, sans-serif;
+}
 /*------footer------*/
 footer{
     font-family:Helvetica,sans-serif;
@@ -37,10 +47,10 @@ footer{
     color:whitesmoke;        
 }
 
-/*------mobile------*/
+/*------mobile------
 @media only screen and (min-width: 720px){
     #contenido{
         display: inline-flex;
     }
 
-}
+}*/
