--- a/Entregable_tp1/css/style.css
+++ b/Entregable_tp1/css/style.css
@@ -11,6 +11,7 @@ h1{
 ul{
     align-content: center;
 }
+
 .navigation li:hover {
     background-color: grey;
 
@@ -34,6 +35,9 @@ ul{
     background-color: rgb(80, 180, 142);
     color:rgb(255, 255, 255);
     font-family: Helvetica, sans-serif;
+}
+#contenido{
+    display: flex;
 }
 /*------footer------*/
 footer{
