--- a/Entregable_tp2/css/style.css
+++ b/Entregable_tp2/css/style.css
@@ -1,7 +1,7 @@
 body{
     font-family:'Raleway',sans-serif;
     align-content: center;   
-    background-color:rgb(236, 131, 33);
+    background-color:rgb(209, 152, 99);
     /*color:rgb(66, 71, 73);*/
 }
 h1{
@@ -22,4 +22,7 @@ ul{
     background-color: rgb(87, 80, 80);
     color:rgb(231, 228, 226);
     font-family: Helvetica, sans-serif;
+}
+.jugador1, .jugador2{
+    color:white;
 }
