--- a/Entregable_tp2/css/style.css
+++ b/Entregable_tp2/css/style.css
@@ -3,30 +3,32 @@ body{
     align-content: center;   
     background-color:rgb(209, 152, 99);
     /*color:rgb(66, 71, 73);*/
+    display:flex;
+
 }
 h1{
     font-family: Helvetica, sans-serif;
     text-align: center;
     color:white;
     width: 300px;
+    align-items: center;
 }
 ul{
     align-content: center;
     text-align: center;
 }
-.navigation, .content, .item{
-    margin-top: 10px;
-    text-align: center;
-}
+
 .item{ 
+    text-align: center;
+    align-items:center;
     height: 45px;
     border-radius: 5px;
-    background-color: rgb(87, 80, 80);
+    background-color: rgb(77, 35, 3);
     color:rgb(231, 228, 226);
     font-family: Helvetica, sans-serif;
 }
 .logo{
-    margin-left: 3%;
+    margin-left: 2%;
     /*display:flex;*/
     float: left;
 }
@@ -42,4 +44,11 @@ ul{
 }
 .jugador2:hover{
     background-color: blue;
+}
+.content, .navigation{
+    margin-right: auto;
+    float: right;
+}
+.content{
+    margin-top: auto;
 }
