--- a/Entregable_tp3/css/style.css
+++ b/Entregable_tp3/css/style.css
@@ -20,11 +20,11 @@ body{
     /*animation: entrada 1s linear infinite;}*/
 
 .entrada:hover{
-    background-image: url("/Entregable_tp3/image/mulan_logo.png");
+    background-image: url("/Entregable_tp3/image/polvo_rojo.png");
     transition: background-image 3s ease-in ;
 }
 .capa1{
-    background-image: url("/Entregable_tp3/image/_1.png");
+    background-image: url("/Entregable_tp3/image/polvo_rojo.png");
     /*animation: entrada 1s linear infinite;*/
 }
 
@@ -41,11 +41,11 @@ P{
 }
 /*----------LOGO-----------*/
 .logo{
-    width:100%;
-    height: 100%;
-    
+    width:720;
+    height: 486;    
 }
 .logo:hover{
+    margin-left: 300px;
     background-image: url("/Entregable_tp3/image/mulan_logo.png");
 }
 
@@ -75,7 +75,7 @@ P{
 a{
     color:white;
     text-decoration:none;
-    text-transform: uppercase;
+    /*text-transform: uppercase;*/
     font-family: Arial, Helvetica, sans-serif;
     display: inline-block;
     margin: 20px 30px 10px 50px;
@@ -106,7 +106,7 @@ a{
 #foto{
     float:left;
     position: relative;
-    margin: 30px 0px 0px 20px;
+    margin: 30px 20px 0px 20px;
 }
 
 .content1 img{
@@ -145,19 +145,23 @@ a{
     rotateY(30deg) rotateZ(0deg) translateX(-30px)
     translateY(0px) translateZ(200px);
 }
-#text {
-    position: absolute;
-    width: 150px;;
+figure{
+    display: inline-block;
+    flex-direction: row;
+}
+#text {   
+    text-align: center; 
+    width: 5px;;
     color: white;
     background-color:rgb(236, 12, 12);
     font-size: 24px;
     font-weight: bold;
-    font-family:'Caveat Brush', cursive;
-    top:200px;
+    margin-left: 10px;
 }
 img{
     width:200px;
     height:250px;
+    border-radius: 30px;
    /* position:absolute;*/
 }
 /*--------carrusel------*/
