--- a/Entregable_tp3/css/style.css
+++ b/Entregable_tp3/css/style.css
@@ -5,7 +5,7 @@ body{
 .entrada{
     width:100%;
     height: 100%;
-    background-image: url("image/1sinfondo.gif");
+    background-image: url("../image/1sinfondo.gif");
     background-attachment: fixed;
     top:36px; left:240px; visibility:visible; z-index:1;
 
