--- a/Entregable_tp3/css/style.css
+++ b/Entregable_tp3/css/style.css
@@ -7,6 +7,7 @@
 
 body{
     background-color:black;
+    color:white;
     font-family:Mulan;
 }
 h1{
@@ -14,10 +15,14 @@ h1{
     color:  rgb(182, 122, 54);
     font-size: 40px;
 }
-p{
-    color:  rgb(236, 12, 12);
-    /*font-family:'Caveat Brush', cursive;*/
-    text-align:center;
+
+a{
+    color:white;
+    text-decoration:none;
+    /*text-transform: uppercase;*/
+    font-family: Arial, Helvetica, sans-serif;
+    display: inline-block;
+    margin: 20px 30px 10px 50px;
 }
 /*----------ENTRADA-----------*/
 .entrada{    
@@ -86,22 +91,84 @@ p{
     0%{ transform: rotate(0deg);}
     100%{transform: rotate(360deg);}
 }
-/*----------HEADER MENU-----------*/
-#header{       
-    text-align:left;
-    align-items: left;
-    background:black;    
+/*---------- MENU-----------*/
+.menu{       
+    /*text-align:left;
+    align-items: left;*/
+    background-color: rgba(180, 46, 46, 0.95);   
+    /**/
+    border-radius: 5%;
+    height: 70px;
+    left: 20;
+    top: 0;
+    bottom: 0;
+    overflow-y: scroll;
+    position: fixed;
+    transform: translate3d(0px, -100%, 0px);
+    transition: transform 0.35s cubic-bezier(0.05, 1.04, 0.72, 0.98) 0s;
+    width: 90%;
+    z-index: 1001;
 }
 
-a{
-    color:white;
+.mHamburguesa{
+	position:fixed;
+    background-color:transparent;
+	left:0;
+	top:0;
+	height:30px;
+	width:30px;
+	padding:20px 20px;
+	transform:translate3d(0, 0, 0);
+	transition:transform 0.25s cubic-bezier(0.05, 1.04, 0.72, 0.98);
+	z-index:1002;
+	cursor:pointer;
+	user-select:none
+}
+.linea{ /*tengo un div vacio y le doy tamaño y color*/
+	background:rgb(212, 17, 17);
+    margin-left: 10px;
+    margin-bottom:4px;
+	border-radius:2px;
+	width:28px;
+	height:4px;
+	opacity:1;
+	transform:translate3d(0, 0, 0);
+	transition:all 0.25s cubic-bezier(0.05, 1.04, 0.72, 0.98);
+}
+.mHamburguesa:hover .-sup{
+	transform:translateY(-100%);
+}
+.mHamburguesa:hover .-ab{
+	transform:translateY(100%);
+}
+.mHamburguesa.is-active .-sup{
+	transform:translateY(200%) rotate(45deg) !important;
+}
+.mHamburguesa.is-active .-med{
+	opacity: 0;
+}
+.mHamburguesa.is-active .-ab{
+	transform:translateY(-200%) rotate(135deg) !important;
+}
+
+.menu.is_active{
+    transform: translate3d(60px, 0px, 0px);
+}
+
+.menu ul li { 
+    list-style:none;
+    float:left;
+    height:3em;
+    text-transform:none;
+  }
+.menu ul li a{
     text-decoration:none;
-    /*text-transform: uppercase;*/
-    font-family: Arial, Helvetica, sans-serif;
-    display: inline-block;
-    margin: 20px 30px 10px 50px;
 }
-
+.menu ul li a:hover{
+    text-decoration:none;
+    color:rgb(204, 154, 154);
+    transform: scale(1.4);
+}
 /*----------ESTA VACIO POR AHORA-----------*/
 #navigation{
     height: 780px;
@@ -154,22 +221,22 @@ a{
     rotateY(30deg) rotateZ(0deg) translateX(-30px)
     translateY(0px) translateZ(40px);
 }
-#content1:hover .foto3{
+#reparto:hover .foto3{
     transform: perspective(2000px) rotateX(0deg) 
     rotateY(30deg) rotateZ(0deg) translateX(-30px)
     translateY(0px) translateZ(80px);
 }
-#content1:hover .foto4{
+#reparto:hover .foto4{
     transform: perspective(2000px) rotateX(0deg) 
     rotateY(30deg) rotateZ(0deg) translateX(-30px)
     translateY(0px) translateZ(120px);
 }
-#content1:hover .foto5{
+#reparto:hover .foto5{
     transform: perspective(2000px) rotateX(0deg) 
     rotateY(30deg) rotateZ(0deg) translateX(-30px)
     translateY(0px) translateZ(160px);
 }
-#content1:hover .foto6{
+#reparto:hover .foto6{
     transform: perspective(2000px) rotateX(0deg) 
     rotateY(30deg) rotateZ(0deg) translateX(-30px)
     translateY(0px) translateZ(200px);
@@ -185,31 +252,35 @@ a{
 }
 
 /*--------carrusel------*/
-#content2 {
-    width:100%;
+#carrusel {
+    width:720px;
     height: 100%;
     margin:auto;
 }
-#content2 ul{
+#carrusel ul{
     display:flex;
     float: right;
     width:100%;
     margin-right: 10px;
     padding:0;
-    animation: cambio 20s infinite;
     position: relative;
 }
-#content2 li{
+#carrusel li{
     width:100%;
     list-style: none;
+    position: relative;
 }
-#content2 img {
+#carrusel img {
     height: 520px;
     width: 1280px;
+    animation: cambio 20s infinite;
+
 }
 @keyframes cambio {
-    from { margin-left: 0px; } 
-    to { margin-left: -1260px; } 
+    0%,  17.5%  { transform: translateZ(-35vw) rotateY(0);margin-left: 0%; }
+	27.5%, 45%  { transform: translateZ(-35vw) rotateY(-120deg);margin-left:-100%; }
+	55%, 72.5%  { transform: translateZ(-35vw) rotateY(-240deg);margin-left:-200%; }
+	82.5%, 100% { transform: translateZ(-35vw) rotateY(-360deg);margin-left:-300%; }
 
     /*0% { margin-left: 0%;}
     20% {margin-left: 0%;}
