--- a/Entregable_tp3/css/style.css
+++ b/Entregable_tp3/css/style.css
@@ -458,8 +458,19 @@ input, text, button,textarea{
     width: 50%;
     font-family: Arial, Helvetica, sans-serif;
 margin-left: auto;margin-right: auto;}
-.img_ev:hover{
-    transform: perspective(2000px) rotateX(0deg) 
-    rotateY(30deg) rotateZ(0deg) translateX(-30px)
+
+.en_event img{
+    position:relative;
+    width: 480px;
+    height: auto;
+    transition: all ease 1250ms;
+    transform-style: preserve-3d;
+    border-radius: 30px;
+    box-shadow: 3px 3px whitesmoke, -1em 0 0.4em black;
+}
+
+.en_event img:hover{
+    transform: perspective(500px) rotateX(0deg) 
+    rotateY(10deg) rotateZ(0deg) translateX(0px)
     translateY(0px) translateZ(0px);
 }
