--- a/TPE5-diazpace_molleker_lucero/css/style.css
+++ b/TPE5-diazpace_molleker_lucero/css/style.css
@@ -4,9 +4,9 @@
     padding: 0;
     font-family: 'Roboto', sans-serif;
 }
+
 a{
     text-decoration: none;
-    color:white;
 }
 .presentacion{
     height: 466px;
@@ -43,12 +43,13 @@ a{
 
 .h1-index{
     display: block;
-    width: 120px;
     float: right;
     margin-right: 20px;
     margin-top: 30px;
     clear: both;
     color: red;
+    font-family: 'Squada One', cursive;
+    font-size: 72px;
 }
 
 .opciones-login{
@@ -56,15 +57,16 @@ a{
     height: 260px;
     display: flex;
     flex-direction: column;
+    align-items: center;
 }
 
 .login{
     background-color: white;
     border: 2px solid #200EED;
     height: 50px;
-    width: 50%;
+    width: 150px;
     margin: auto;
-    margin-top: 50px;
+    /*margin-top: 50px;*/
     margin-bottom: 0;
     font-family: 'Roboto', sans-serif;
     border-radius: 10px;
@@ -74,14 +76,24 @@ a{
     background-color: #3431B4;
     color: white;
     height: 50px;
-    width: 50%;
+    width: 150px;
     margin: auto;
-    margin-top: 20px;
+    /*margin-top: 20px;*/
     margin-bottom: 0;
     font-family: 'Roboto', sans-serif;
     border-radius: 10px;
 }
-
+.prueba{
+    background-color: #FF6B6B;
+    color: white;
+    height: 50px;
+    width: 150px;
+    margin: auto;
+    /*margin-top: 20px;*/
+    margin-bottom: 0;
+    font-family: 'Roboto', sans-serif;
+    border-radius: 10px;
+}
 
 h1{
     text-align: center;
@@ -100,7 +112,7 @@ h1{
 label{
     margin-bottom: 10px;
     text-align: start;
-    width: 50%;
+    width: 40%;
     min-width: 200px;
     font-family: 'Roboto', sans-serif;
 }
@@ -235,12 +247,14 @@ label{
     margin-top: 32px;
     height: 50px;
     width: 30%;
+    display: inline-block;
+    flex-direction: row;
 }
 
 .links{
     margin-top: 500px;
     margin-left: 6%;
-    margin-right: 6%;
+    margin-right: 6%;    
     font-size: large;
     color: white;
 }
