--- a/TPE5-diazpace_molleker_lucero/css/style.css
+++ b/TPE5-diazpace_molleker_lucero/css/style.css
@@ -266,3 +266,47 @@ label{
     background-repeat: no-repeat;
     background-image: url(../images/social_media_logos1.png);
 }
+
+/* AYUDA - acordeon */
+
+.acordeon{
+    width: 800px;
+    margin-left: auto;
+    margin-right: auto;
+    padding: 2%;
+}
+
+.acordeon input {
+    display: none;
+  }
+  
+  .acordeon__titulo {
+    display: block;
+    padding: 15px;
+    background: rgb(90, 90, 90);
+    color: #fff;
+    font-size: 20px;
+    cursor: pointer;
+    border-bottom: 1px solid #fff;
+    width: 100%;
+  }
+  .acordeon__titulo:hover {
+    background: rgba(110, 110, 110, 0.8);
+  }
+  
+  .acordeon__contenido {
+    height: 0;
+    overflow: hidden;
+    margin: 0;
+    transition: all 0.5s;
+    width: 100%;
+  }
+  
+  .acordeon input:checked ~ .acordeon__contenido{
+    height: auto;
+    margin: 15px 0;
+  }
+
+  .ayuda .tit-plan {
+    margin-top: 20px;
+  }
