--- a/TPE5-diazpace_molleker_lucero/css/style.css
+++ b/TPE5-diazpace_molleker_lucero/css/style.css
@@ -2,7 +2,7 @@
     margin: 0;
     border: 0;
     padding: 0;
-    font-family: 'Roboto', sans-serif;
+    /* font-family: 'Roboto', sans-serif; */
 }
 
 a{
@@ -68,7 +68,6 @@ a{
     margin: auto;
     /*margin-top: 50px;*/
     margin-bottom: 0;
-    font-family: 'Roboto', sans-serif;
     border-radius: 10px;
 }
 
@@ -80,7 +79,6 @@ a{
     margin: auto;
     /*margin-top: 20px;*/
     margin-bottom: 0;
-    font-family: 'Roboto', sans-serif;
     border-radius: 10px;
 }
 .prueba{
@@ -91,7 +89,6 @@ a{
     margin: auto;
     /*margin-top: 20px;*/
     margin-bottom: 0;
-    font-family: 'Roboto', sans-serif;
     border-radius: 10px;
 }
 
@@ -100,7 +97,6 @@ h1{
     margin: auto;
     margin-top: 10px;
     margin-bottom: 10px;
-    font-family: 'Roboto', sans-serif;
 }
 
 .flex{
@@ -114,7 +110,6 @@ label{
     text-align: start;
     width: 40%;
     min-width: 200px;
-    font-family: 'Roboto', sans-serif;
 }
 
 .input-login{
@@ -123,7 +118,6 @@ label{
     border: 2px solid #A9A6A6;
     height: 30px;
     margin-bottom: 20px;
-    font-family: 'Roboto', sans-serif;
     border-radius: 10px;
 }
 
@@ -131,7 +125,6 @@ label{
     min-width: 180px;
     height: 40px;
     color: white;
-    font-family: 'Roboto', sans-serif;
     border-radius: 10px;
     margin-bottom: 10px;
     margin-top: 10px;
@@ -250,6 +243,23 @@ label{
     margin-left: 30px;
     height: 50px;
     width: 40%;
+}
+
+.sugerencias{
+    display: flex;
+    flex-direction: row;
+    font-weight: bolder;
+    font-size: xx-large;
+}
+
+.back{
+    margin-top: 20px;
+    margin-left: 1%;
+    width: 20px;
+    height: 20px;
+    background-image: url(../images/Flecha-back.png);
+    background-repeat: no-repeat;
+    background-size: cover;
 }
 
 .links{
