--- a/TPE5-diazpace_molleker_lucero/css/style.css
+++ b/TPE5-diazpace_molleker_lucero/css/style.css
@@ -542,3 +542,26 @@ margin-right: auto;
 #descartar {
     color: rgb(82, 82, 82);
 }
+
+
+/* COMENTARIOS ---------------------------------------*/
+
+#text-comentario {
+    border: 1px solid grey;
+}
+
+#lista-comentarios {
+    width: 40%;
+    height: 50%;
+    margin-left: auto;
+    margin-right: auto;
+    margin-top: 20px;
+    margin-bottom: 20px;
+}
+
+.un-comentario {
+    width: 98%;
+    margin-top: 5px;
+    padding: 5px;
+    background-color: rgb(245, 240, 240);
+}
