--- a/TPE5-diazpace_molleker_lucero/css/style.css
+++ b/TPE5-diazpace_molleker_lucero/css/style.css
@@ -548,6 +548,7 @@ margin-right: auto;
 
 #text-comentario {
     border: 1px solid grey;
+    width: 30%;
 }
 
 #lista-comentarios {
@@ -557,11 +558,24 @@ margin-right: auto;
     margin-right: auto;
     margin-top: 20px;
     margin-bottom: 20px;
+    padding: 20px;
 }
 
 .un-comentario {
-    width: 98%;
     margin-top: 5px;
     padding: 5px;
     background-color: rgb(245, 240, 240);
+    width: 74%;
+    margin-left: auto;
+    margin-right: auto;
+}
+
+.un-comentario-negrita {
+    margin-top: 5px;
+    padding: 5px;
+    background-color: rgb(245, 240, 240);
+    width: 74%;
+    margin-left: auto;
+    margin-right: auto;
+    font-weight: bolder;
 }
