--- a/TPE5-diazpace_molleker_lucero/css/style.css
+++ b/TPE5-diazpace_molleker_lucero/css/style.css
@@ -54,7 +54,14 @@ a{
     font-family: 'Squada One', cursive;
     font-size: 72px;
 }
-
+/*-------- FLECHA ATRAS------------*/
+.atras{
+    margin-left: 1%;
+    margin-top: 1%;
+    height: 25px;
+    width: 25px;
+}
+/*----------------LOG IN--------------------*/
 .opciones-login{
     width: 100%;
     height: 260px;
@@ -86,6 +93,15 @@ a{
     font-family: 'Roboto', sans-serif;
     border-radius: 10px;
 }
+.user{
+    margin-bottom: 10px;
+    text-align: start;
+    width: 20%;
+    min-width: 200px;
+    font-family: 'Roboto', sans-serif;
+}
+
+/*-----------------------------*/
 .prueba{
     background-color: #FF6B6B;
     color: white;
@@ -121,7 +137,7 @@ label{
 }
 
 .input-login{
-    width:40%;
+    width: 40%;
     min-width: 200px;
     border: 2px solid #A9A6A6;
     height: 30px;
@@ -241,23 +257,27 @@ label{
     margin-top: 25px;
     margin-bottom: 25px;
     height: 50px;
-    width: 20%;
+    width: 30%;
     min-width: 220px;
     margin-left: 1%;
     background-repeat: no-repeat;
     background-image: url(../images/logo_blanco1.png);
 }
-
+.relleno{
+    width: 20%;
+    background-color: black;
+}
 .container-links{
-    margin-top: 40px;
-    margin-left: 30px;
-    height: 50px;
-    width: 40%;
+    margin-top: auto;
+    margin-bottom: auto;
+    width: 45%;
+    display:inline-block;
+    flex-direction: row;
+    text-align: right;
 }
 
 .links{
-    margin-top: 500px;
-    margin-left: 6%;
+    margin-left: 2%;
     margin-right: 6%;
     font-size: large;
     color: white;
@@ -265,7 +285,7 @@ label{
 
 .search{
     margin-top: 37px;
-    width: 15%;
+    width: 30%;
     min-width: 150px;
     height: 25px;
     margin-left: 200px;
@@ -280,23 +300,10 @@ label{
     height: 25px;
     width: 25px;
     margin-right: 20px;
+    margin-left: 10px;
 }
 
-
-.contact{
-    display: flex;
-    flex-direction: row;
-    justify-content: center;
-    height: 70px;
-    background-color: #4f4f4f;
-}
-
-.social-media{
-    margin-top: 4px;
-    width: 335px;
-    background-repeat: no-repeat;
-    background-image: url(../images/social_media_logos1.png);
-}
+/*----------MUSICA-----------*/
 
 .music-sections{
     display: flex;
@@ -403,6 +410,10 @@ label{
     margin-right: auto;
     background-image: url(../images/player.png);
     background-repeat: no-repeat;
+    position: fixed;
+    left:0;
+    top:85%;
+    padding:20px 20px;
 }
 
 /* AYUDA - acordeon */
@@ -448,3 +459,26 @@ label{
   .ayuda .tit-plan {
     margin-top: 20px;
   }
+/*----------FOOTER-----------*/
+footer{
+    width: 100%;
+    bottom: 0;
+    position: absolute;
+}
+
+.contact{
+    position: absolute;
+    bottom: 0;
+    display: flex;
+    flex-direction: row;
+    justify-content: center;
+    height: 70px;
+    background-color: #4f4f4f;
+}
+
+.social-media{
+    margin-top: 4px;
+    width: 335px;
+    background-repeat: no-repeat;
+    background-image: url(../images/social_media_logos1.png);
+}
