--- a/TPE5-diazpace_molleker_lucero/css/style.css
+++ b/TPE5-diazpace_molleker_lucero/css/style.css
@@ -2,7 +2,7 @@
     margin: 0;
     border: 0;
     padding: 0;
-    /* font-family: 'Roboto', sans-serif; */
+    font-family: 'Roboto', sans-serif; 
 }
 ::-webkit-scrollbar {display: none;}
 
@@ -418,11 +418,12 @@ label{
 .player{
     height: 55px;
     width: 100%;
-    border: 2px solid black;
+    /*border: 2px solid black;*/
     background-position: center;
     margin-left: auto;
     margin-right: auto;
     background-image: url(../images/player.png);
+    background-color: #4f4f4f;
     background-repeat: no-repeat;
     position: fixed;
     left:0;
@@ -573,6 +574,26 @@ margin-right: auto;
     margin-right: auto;
     margin-top: 20px;
   }
+
+.un-comentario {
+    margin-top: 5px;
+    padding: 5px;
+    background-color: rgb(245, 240, 240);
+    width: 74%;
+    margin-left: auto;
+    margin-right: auto;
+}
+
+.un-comentario-negrita {
+    margin-top: 5px;
+    padding: 5px;
+    background-color: rgb(245, 240, 240);
+    width: 74%;
+    margin-left: auto;
+    margin-right: auto;
+    font-weight: bolder;
+}
+
 /*----------FOOTER-----------*/
 footer{
     width: 100%;
@@ -597,23 +618,4 @@ footer{
     background-image: url(../images/social_media_logos1.png);
     margin-bottom: 20px;
     padding: 20px;
-}
-
-.un-comentario {
-    margin-top: 5px;
-    padding: 5px;
-    background-color: rgb(245, 240, 240);
-    width: 74%;
-    margin-left: auto;
-    margin-right: auto;
-}
-
-.un-comentario-negrita {
-    margin-top: 5px;
-    padding: 5px;
-    background-color: rgb(245, 240, 240);
-    width: 74%;
-    margin-left: auto;
-    margin-right: auto;
-    font-weight: bolder;
 }
